# kothok-edge-tts

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: token-check.yml
src/: auth.rs  connection.rs  edge_tts.rs  error.rs  event.rs  lib.rs  protocol.rs  rate.rs  ssml.rs  tts.rs  voice_cache.rs  voice_fetch.rs  voice_list.rs  voice_table.rs  voice_types.rs
tests/: token_rotation.rs
